test/typeError.slq

def foo(x:ğ”¹){
	y:=if x then 2:int[3] else 0:int[3];
	forget(x=y!=0);
	return y;
}

def main(){
	a:=(0:ğ”¹,1:ğ”¹,0:ğ”¹);
	for i in [0..3){
		a[i]:=foo(a[i]); // error
	}
	if a[0]{}
	return a;
}
